--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -14,3 +14,9 @@ ul li {
   margin-left: 40px;
   padding: 6px;
 }
+
+ol li {
+  list-style-type: decimal;
+  margin-left: 40px;
+  padding: 6px;
+}
